in honor of Steve :)

--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div id="summary">
-	  <h1>Whops! We can't find that page...</h1>
+	  <h1>Whoops! We can't find that page...</h1>
 	  <h2>error 404</h2>
 	</div>
 
